added new papers

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 							</a>
 						</td>
 						<td>
-							4D Vision for Perceptive Machines<br>
+							<b>4D Vision for Perceptive Machines</b><br>
 							<i>Royal Academy of Engineering funded project </i><br>
 							Aug 2018 - Jul 2023<br>
 							<!-- <span class="btn-group btn-group-xs">
@@ -153,7 +153,7 @@
 							</a>
 						</td>
 						<td>
-							ALIVE: Live Action Light Fields for Immersive VR Experiences<br>
+							<b>ALIVE: Live Action Light Fields for Immersive VR Experiences</b><br>
 							<i>Innovate UK project in collaboration with Figment Productions and Foundry</i><br>
 							October 2016 - December 2017<br>
 							<span class="btn-group btn-group-xs">
@@ -173,7 +173,7 @@
 							</a>
 						</td>
 						<td>
-							IMPART: Intelligent Management Platform for Advanced Real-Time media processes<br>
+							<b>IMPART: Intelligent Management Platform for Advanced Real-Time media processes</b><br>
 							<i>EU FP7 project in collaboration with Filmlight, Double Negative, AUTH, UPF and BUT</i><br>
 							July 2013 - October 2015<br>
 							<span class="btn-group btn-group-xs">
@@ -195,14 +195,51 @@
 							</a>
 						</td>
 						<td>
-							<a href="docs/iccv19/ArminICCV2019.pdf">U4D: Unsupervised 4D Dynamic Scene Understanding</a><br>
-							<a href="http://arminmustafa.github.io">Armin Mustafa</a>, <a href="https://www.turing.ac.uk/people/researchers/chris-russell">Chris Russell</a>, and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a><br>
+							<b>U4D: Unsupervised 4D Dynamic Scene Understanding</b><br>
+							Armin Mustafa, Chris Russell, and Adrian Hilton<br>
 							at <i>International Conference on Computer Vision (ICCV) 2019</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/iccv19/ArminICCV2019.pdf">PDF</a>
-								<a class="btn btn-success" target="_blank" href="https://www.youtube.com/watch?v=mA60vkLXBJ0&t=30s">Video</a>
 								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4DMP/U4D/">Website</a>
-								<a class="btn btn-success" target="_blank" href="https://arxiv.org/abs/1907.09905">Arxiv</a>
+								<a class="btn btn-success" target="_blank" href="https://www.youtube.com/watch?v=mA60vkLXBJ0&t=30s">Video</a>
+							</span>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/ijcv19/ijcv19.png" />
+							</a>
+						</td>
+						<td>
+							<b>Semantically Coherent 4D Scene Flow of Dynamic Scenes</b><br>
+							Armin Mustafa and Adrian Hilton<br>
+							at <i>International Journal in Computer Vision (IJCV) 2019</i><br>
+							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="docs/ijcv19/ArminIJCV2019.pdf">PDF</a>
+								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4DMP/SC4D/">Website</a>
+							</span>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/files/iccvw19.png" />
+							</a>
+						</td>
+						<td>
+							<b>Learning Dense Wide Baseline Stereo Matching for People</b><br>
+							Akin Caliskan, Armin Mustafa, Evren Imre, and Adrian Hilton<br>
+							at <i>International Conference on Computer Vision Workshop (ICCVW) 2019</i><br>
+							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="docs/files/Caliskan2019.pdf">PDF</a>
+								<a class="btn btn-success" target="_blank" href="https://arxiv.org/abs/1910.01241">Arxiv</a>
 							</span>
 						</td>
 					</tr>
@@ -216,13 +253,32 @@
 							</a>
 						</td>
 						<td>
-							<a href="docs/cvpr16/ArminIJCV2019.pdf">Temporally Coherent General Dynamic Scene Reconstruction</a><br>
-							<a href="http://arminmustafa.github.io">Armin Mustafa</a>, <a href="https://www.surrey.ac.uk/people/marco-volino" target="_blank">Marco Volino</a>, Hansung Kim, <a href="https://www.surrey.ac.uk/people/jean-yves-guillemaut" target="_blank">Jean-Yves Guillemaut</a>, and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a><br>
+							<b>Temporally Coherent General Dynamic Scene Reconstruction</b><br>
+							Armin Mustafa, Marco Volino, Hansung Kim, Jean-Yves Guillemaut, and Adrian Hilton<br>
 							under review at <i>International Journal in Computer Vision (IJCV) 2019</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/cvpr16/ArminIJCV2019.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="https://www.youtube.com/watch?v=FFVTIY47NQ8&t=1s">Video</a>
 								<a class="btn btn-success" target="_blank" href="https://arxiv.org/abs/1907.08195">Arxiv</a>
+							</span>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/files/icra20.jpg" />
+							</a>
+						</td>
+						<td>
+							<b>A* 3D Dataset: Towards Autonomous Driving in Challenging Environments</b><br>
+							Quang-Hieu Pham, Pierre Sevestre, Ramanpreet Singh Pahwa, Huijing Zhan, Chun Ho Pang, Yuda Chen, Armin Mustafa, Vijay Chandrasekhar, and Jie Lin<br>
+							under review at <i>IEEE International Conference on Robotics and Automation (ICRA) 2020</i><br>
+							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="docs/files/icra20.pdf">PDF</a>
+								<a class="btn btn-success" target="_blank" href="https://arxiv.org/abs/1909.07541">Arxiv</a>
 							</span>
 						</td>
 					</tr>
@@ -237,10 +293,11 @@
 							</a>
 						</td>
 						<td>
-							<a href="docs/files/volino_3dv2019.pdf">Light Field Compression using Eigen Textures</a><br>
-							<a href="https://www.surrey.ac.uk/people/marco-volino" target="_blank">Marco Volino</a>, <a href="http://arminmustafa.github.io">Armin Mustafa</a>, <a href="https://www.surrey.ac.uk/people/jean-yves-guillemaut" target="_blank">Jean-Yves Guillemaut</a> and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a><br>
+							<b>Light Field Compression using Eigen Textures</b><br>
+							Marco Volino, Armin Mustafa, Jean-Yves Guillemaut and Adrian Hilton<br>
 							at <i>3D Vision (3DV) 2019</i><br>
 							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="docs/files/volino_3dv2019.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="https://cvssp.org/projects/lightfields/light-field-compression-using-eigen-textures/">Website</a>
 							</span>
 						</td>
@@ -256,8 +313,8 @@
 							</a>
 						</td>
 						<td>
-							<a href="docs/hlc19/ArminHLC2019.pdf">Understanding real-world scenes for human-like machine perception</a><br>
-							<a href="http://arminmustafa.github.io">Armin Mustafa</a> and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a><br>
+							<b>Understanding real-world scenes for human-like machine perception</b><br>
+							Armin Mustafa and Adrian Hilton<br>
 							at <i><a href="http://mi21-hlc.doc.ic.ac.uk">Human Like Computing Machine-Intelligence Workshop 2019 (MI21-HLC)</a></i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/hlc19/ArminHLC2019.pdf">PDF</a>
@@ -276,8 +333,8 @@
 							</a>
 						</td>
 						<td>
-							<a href="docs/tip18/ArminTIP2018.pdf">MSFD: Multi-scale segmentation based feature detection for wide-baseline scene reconstruction</a><br>
-							<a href="http://arminmustafa.github.io">Armin Mustafa</a>,  Hansung Kim, and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a><br>
+							<b>MSFD: Multi-scale segmentation based feature detection for wide-baseline scene reconstruction</b><br>
+							Armin Mustafa,  Hansung Kim, and Adrian Hilton<br>
 							at <i>IEEE Transactions in Image Processing(TIP) 2018</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/tip18/ArminTIP2018.pdf">PDF</a>
@@ -296,8 +353,8 @@
 							</a>
 						</td>
 						<td>
-							<a href="docs/3dv17/Armin3DV2017.pdf">4D Temporally Coherent Dynamic Light-field Video (Spotlight)</a><br>
-							<a href="http://arminmustafa.github.io">Armin Mustafa</a>, <a href="https://www.surrey.ac.uk/people/marco-volino" target="_blank">Marco Volino</a>, <a href="https://www.surrey.ac.uk/people/jean-yves-guillemaut" target="_blank">Jean-Yves Guillemaut</a> and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a><br>
+							<b>4D Temporally Coherent Dynamic Light-field Video (Spotlight)</b><br>
+							Armin Mustafa, Marco Volino, Jean-Yves Guillemaut and Adrian Hilton<br>
 							at <i>3D Vision (3DV) 2017</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/3dv17/Armin3DV2017.pdf">PDF</a>
@@ -319,8 +376,8 @@
 							</a>
 						</td>
 						<td>
-							<a href="docs/cvpr17/ArminCVPR2017.pdf">Semantically Coherent Co-segmentation and Reconstruction of Dynamic Scenes</a><br>
-							<a href="http://arminmustafa.github.io">Armin Mustafa</a> and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a><br>
+							<b>Semantically Coherent Co-segmentation and Reconstruction of Dynamic Scenes</b><br>
+							Armin Mustafa and Adrian Hilton<br>
 							at <i>IEEE International Conference in Computer Vision & Pattern Recognition CVPR, 2017</i><br>
 							<!-- btn-group is to create groups of buttons. The size of the class brand btn-group in this case, it does not specify the specific button -->
 							<span class="btn-group btn-group-xs">
@@ -330,7 +387,6 @@
 								<a class="btn btn-success" target="_blank" href="docs/cvpr17/poster.pdf">Poster</a>
 								<a class="btn btn-success" target="_blank" href="docs/cvpr17/ppt.pdf">PPT</a>
 								<!--<a class="btn btn-success" target="_blank" href="docs/cvpr17/cvpr17.bib">bib</a>-->
-								<!--<a class="btn btn-success" target="_blank" href="#">web</a>-->
 								<!--<a class="btn btn-success" target="_blank" href="#">data</a>-->
 							</span>
 						</td>
@@ -346,8 +402,8 @@
 							</a>
 						</td>
 						<td>
-							<a href="docs/cvpr16/ArminCVPR2016.pdf">Temporally Coherent 4D Reconstruction of Complex Dynamic Scenes (Oral)</a><br>
-							<a href="http://arminmustafa.github.io">Armin Mustafa</a>, Hansung Kim, <a href="https://www.surrey.ac.uk/people/jean-yves-guillemaut" target="_blank">Jean-Yves Guillemaut</a> and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a><br>
+							<b>Temporally Coherent 4D Reconstruction of Complex Dynamic Scenes (Oral)</b><br>
+							Armin Mustafa, Hansung Kim, Jean-Yves Guillemaut and Adrian Hilton<br>
 							at <i>IEEE International Conference in Computer Vision & Pattern Recognition CVPR, 2016</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/cvpr16/ArminCVPR2016.pdf">PDF</a>
@@ -369,17 +425,14 @@
 							</a>
 						</td>
 						<td>
-							<a href="docs/eccv16/ArminECCV2016.pdf">4D Match Trees for Non-rigid Surface Alignment</a><br>
-							<a href="http://arminmustafa.github.io">Armin Mustafa</a>, Hansung Kim and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a><br>
+							<b>4D Match Trees for Non-rigid Surface Alignment</b><br>
+							Armin Mustafa, Hansung Kim and Adrian Hilton<br>
 							at <i>The 14th European Conference on Computer Vision, ECCV 2016</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/eccv16/ArminECCV2016.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4DMP/4Dnonseq/">Website</a>
 								<a class="btn btn-success" target="_blank" href="https://youtu.be/GPu-UKppCfk">Video</a>
 								<a class="btn btn-success" target="_blank" href="docs/eccv16/poster.pdf">Poster</a>
-								<!--<a class="btn btn-success" target="_blank" href="docs/cvpr17/cvpr17.bib">bib</a>-->
-								<!--<a class="btn btn-success" target="_blank" href="http://dx.doi.org/10.1111/cgf.12756">DOI</a>-->
-								<!--<a class="btn btn-success" target="_blank" href="#">data</a>-->
 							</span>
 						</td>
 					</tr>
@@ -394,17 +447,14 @@
 							</a>
 						</td>
 						<td>
-							<a href="docs/iccv15/ArminICCV2015.pdf">General Dynamic Scene Reconstruction from Multiple View Video</a><br>
-							<a href="http://arminmustafa.github.io">Armin Mustafa</a>, Hansung Kim, <a href="https://www.surrey.ac.uk/people/jean-yves-guillemaut" target="_blank">Jean-Yves Guillemaut</a> and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a><br>
+							<b>General Dynamic Scene Reconstruction from Multiple View Video</b><br>
+							Armin Mustafa, Hansung Kim, Jean-Yves Guillemaut and Adrian Hilton<br>
 							at <i>International Conference on Computer Vision (ICCV) 2015</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/iccv15/ArminICCV2015.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4DMP/DyRecon/">Website</a>
 								<a class="btn btn-success" target="_blank" href="https://youtu.be/uIDeJ1_MvaE">Video</a>
 								<a class="btn btn-success" target="_blank" href="docs/iccv15/poster.pdf">Poster</a>
-								<!--<a class="btn btn-success" target="_blank" href="docs/cvpr17/cvpr17.bib">bib</a>-->
-								<!--<a class="btn btn-success" target="_blank" href="http://www.cvssp.org/projects/4d/4DVT/#data">data</a>-->
-								<!--<a class="btn btn-success" target="_blank" href="#">data</a>-->
 							</span>
 						</td>
 					</tr>
@@ -418,8 +468,8 @@
 							</a>
 						</td>
 						<td>
-							<a href="docs/3dv15/Armin3DV2015.pdf">Segmentation based Features for Wide-baseline Multi-view Reconstruction (Oral)</a><br>
-							<a href="http://arminmustafa.github.io">Armin Mustafa</a>, Hansung Kim, Evren Imre and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a><br>
+							<b>Segmentation based Features for Wide-baseline Multi-view Reconstruction (Oral)</b><br>
+							Armin Mustafa, Hansung Kim, Evren Imre and Adrian Hilton<br>
 							at <i>3D Vision (3DV) 2015</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/3dv15/Armin3DV2015.pdf">PDF</a>
@@ -442,9 +492,8 @@
 							</a>
 						</td>
 						<td>
-							<b>Short Paper</b><br/>
-							<a href="docs/cvmp14/ArminCVMP2014.pdf">Initial Disparity Estimation using Sparse Matching for Wide-baseline Stereo </a>(Short paper)<br>
-							<a href="http://arminmustafa.github.io">Armin Mustafa</a>, Hansung Kim, Evren Imre and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a><br>
+							<b>Initial Disparity Estimation using Sparse Matching for Wide-baseline Stereo (Short paper)</b><br>
+							Armin Mustafa, Hansung Kim, Evren Imre and Adrian Hilton<br>
 							at <i>The 11th European Conference in Visual Media Production (CVMP) 2015</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/cvmp14/ArminCVMP2014.pdf">PDF</a>
@@ -463,9 +512,8 @@
 							</a>
 						</td>
 						<td>
-							<b>Book Chapter</b><br/>
-							<a href="docs/masters/book.pdf">Multi Finger Gesture Recognition and Classification in Dynamic Environment under Varying Illumination upon Arbitrary Background</a><br>
-							<a href="http://arminmustafa.github.io">Armin Mustafa</a> and <a href="http://home.iitk.ac.in/~venkats/index.html">K.S. Venkatesh</a><br>
+							<b>Multi Finger Gesture Recognition and Classification in Dynamic Environment under Varying Illumination upon Arbitrary Background (Book chapter)</b><br>
+							Armin Mustafa and K.S. Venkatesh<br>
 							in Speech, Image, and Language Processing for Human Computer Interaction: Multi-Modal Advancements 2012</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/masters/book.pdf">PDF</a>
@@ -484,8 +532,8 @@
 							</a>
 						</td>
 						<td>
-							<a href="docs/masters/paper.pdf">Background Reflectance Modeling for Robust Finger Gesture Detection in Highly Dynamic Illumination</a><br>
-							<a href="http://arminmustafa.github.io">Armin Mustafa</a> and <a href="http://home.iitk.ac.in/~venkats/index.html">K.S. Venkatesh</a><br>
+							<b>Background Reflectance Modeling for Robust Finger Gesture Detection in Highly Dynamic Illumination</b><br>
+							Armin Mustafa and K.S. Venkatesh<br>
 							at <i>In International Conference on Hybrid Information Technology, volume 6935 of Lecture Notes in Computer Science, 2011</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/masters/paper.pdf">PDF</a>
@@ -504,7 +552,7 @@
 							</a>
 						</td>
 						<td>
-							Method and apparatus for converting 2d video to 3d video<br>
+							<b>Method and apparatus for converting 2d video to 3d video</b><br>
 							U.S. and Korean Patent 2013</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="https://www.google.com/patents/US20140210944">LINK</a>
@@ -522,8 +570,8 @@
 							</a>
 						</td>
 						<td>
-							A Method and System for Human Gesture based on Visual Contour Analysis<br>
-							<a href="http://arminmustafa.github.io">Armin Mustafa</a> and <a href="http://home.iitk.ac.in/~venkats/index.html">K.S. Venkatesh</a><br>
+							<b>A Method and System for Human Gesture based on Visual Contour Analysis</b><br>
+							Armin Mustafa and K.S. Venkatesh<br>
 							Indian Patent 2010</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="http://www.iitk.ac.in/siic/d/content/method-and-system-human-gesture-based-visual-contour-analysis">LINK</a>
