--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 						<td>
 							<b>Understanding real-world scenes for human-like machine perception</b><br>
 							Armin Mustafa and Adrian Hilton<br>
-							at <i><a href="http://mi21-hlc.doc.ic.ac.uk">Human Like Computing Machine-Intelligence Workshop 2019 (MI21-HLC)</a></i><br>
+							at <i><a href="http://mi21-hlc.doc.ic.ac.uk">Human Like Computing Machine-Intelligence Workshop (MI21-HLC)</a> 2019</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/hlc19/ArminHLC2019.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="docs/hlc19/poster.pdf">Poster</a>
@@ -335,7 +335,7 @@
 						<td>
 							<b>MSFD: Multi-scale segmentation based feature detection for wide-baseline scene reconstruction</b><br>
 							Armin Mustafa,  Hansung Kim, and Adrian Hilton<br>
-							at <i>IEEE Transactions in Image Processing(TIP) 2018</i><br>
+							at <i>IEEE Transactions in Image Processing (TIP) 2018</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/tip18/ArminTIP2018.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4DMP/MSFD/">Website</a>
@@ -378,7 +378,7 @@
 						<td>
 							<b>Semantically Coherent Co-segmentation and Reconstruction of Dynamic Scenes</b><br>
 							Armin Mustafa and Adrian Hilton<br>
-							at <i>IEEE International Conference in Computer Vision & Pattern Recognition CVPR, 2017</i><br>
+							at <i>IEEE International Conference in Computer Vision & Pattern Recognition (CVPR) 2017</i><br>
 							<!-- btn-group is to create groups of buttons. The size of the class brand btn-group in this case, it does not specify the specific button -->
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/cvpr17/ArminCVPR2017.pdf">PDF</a>
@@ -404,7 +404,7 @@
 						<td>
 							<b>Temporally Coherent 4D Reconstruction of Complex Dynamic Scenes (Oral)</b><br>
 							Armin Mustafa, Hansung Kim, Jean-Yves Guillemaut and Adrian Hilton<br>
-							at <i>IEEE International Conference in Computer Vision & Pattern Recognition CVPR, 2016</i><br>
+							at <i>IEEE International Conference in Computer Vision & Pattern Recognition (CVPR) 2016</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/cvpr16/ArminCVPR2016.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4DMP/4DRecon/">Website</a>
@@ -427,7 +427,7 @@
 						<td>
 							<b>4D Match Trees for Non-rigid Surface Alignment</b><br>
 							Armin Mustafa, Hansung Kim and Adrian Hilton<br>
-							at <i>The 14th European Conference on Computer Vision, ECCV 2016</i><br>
+							at <i>The 14th European Conference on Computer Vision (ECCV) 2016</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/eccv16/ArminECCV2016.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4DMP/4Dnonseq/">Website</a>
@@ -534,7 +534,7 @@
 						<td>
 							<b>Background Reflectance Modeling for Robust Finger Gesture Detection in Highly Dynamic Illumination</b><br>
 							Armin Mustafa and K.S. Venkatesh<br>
-							at <i>In International Conference on Hybrid Information Technology, volume 6935 of Lecture Notes in Computer Science, 2011</i><br>
+							at <i>In International Conference on Hybrid Information Technology, volume 6935 of Lecture Notes in Computer Science 2011</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/masters/paper.pdf">PDF</a>
 							</span>
