--- a/index.html
+++ b/index.html
@@ -644,7 +644,16 @@
 						<img class="img-rounded" src="docs/misc/bmvalogo.png" alt="" width="40" height="40"/>
 						</td>
 						<td>
-							<b> &nbsp Semantically Coherent 4D Scene Flow of Dynamic Scenes, 19 July 2019 </b></font> <br/>
+							<b> &nbsp U4D: Unsupervised Dynamic Scene Understanding, 28 Oct 2019 </b></font> <br/>
+							&nbsp at Moving Cameras Workshop, ICCV, Seoul, South Korea <br/> <br/>
+						</td>
+					</tr>
+					<tr>
+						<td>
+						<img class="img-rounded" src="docs/misc/bmvalogo.png" alt="" width="40" height="40"/>
+						</td>
+						<td>
+							<b> &nbsp Semantically Coherent 4D Scene Flow of Dynamic Scenes, 19 Jul 2019 </b></font> <br/>
 							&nbsp at BMVA Meeting on Geometry and Deep Learning, London, UK <br/> <br/>
 						</td>
 					</tr>
@@ -653,7 +662,7 @@
 						<img class="img-rounded" src="docs/misc/hlc.png" alt="" width="40" height="40"/>
 						</td>
 						<td>
-							<b> &nbsp Understanding real-world scenes for human-like machine perception, 03 July 2019 </b></font> <br/>
+							<b> &nbsp Understanding real-world scenes for human-like machine perception, 03 Jul 2019 </b></font> <br/>
 							&nbsp at EPSRC Network+ Human-Like Computing Machine Intelligence Workshop (MI21-HLC), Windsor, UK <br/> <br/>
 						</td>
 					</tr>
@@ -768,7 +777,7 @@
 						<img class="img-rounded" src="docs/misc/astar.png" alt="" width="40" height="40"/>
 						</td>
 						<td>
-							<font size="+0.25"> &nbsp Visiting Researcher: May' 2019</font> <br style="line-height: 8px" />
+							<font size="+0.25"> &nbsp Visiting Researcher: May' 2019 - Oct' 2019 </font> <br style="line-height: 8px" />
 							<b> &nbsp Agency for Science, Technology and Research (A*STAR), Singapore </b><br/>
 						</td>
 					</tr>
