Updated with new information

--- a/index.html
+++ b/index.html
@@ -191,6 +191,43 @@
 					<tr>
 						<td>
 							<a href="#">
+								<img class="imgres" src="docs/files/icra20.jpg" />
+							</a>
+						</td>
+						<td>
+							<b>A* 3D Dataset: Towards Autonomous Driving in Challenging Environments</b><br>
+							Quang-Hieu Pham, Pierre Sevestre, Ramanpreet Singh Pahwa, Huijing Zhan, Chun Ho Pang, Yuda Chen, Armin Mustafa, Vijay Chandrasekhar, and Jie Lin<br>
+							at <i>IEEE International Conference on Robotics and Automation (ICRA) 2020</i><br>
+							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="docs/files/icra20.pdf">PDF</a>
+								<a class="btn btn-success" target="_blank" href="https://arxiv.org/abs/1909.07541">Arxiv</a>
+							</span>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/files/realVr20.png" />
+							</a>
+						</td>
+						<td>
+							<b>Light Field Video for Immersive Content Production (Book Chapter)</b><br>
+							Marco Volino, Armin Mustafa, Jean-Yves Guillemaut and Adrian Hilton<br>
+							in <i>Real VR - Digitial Immersive Reality 2020</i><br>
+							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="docs/files/RealVR.pdf">PDF</a>
+							</span>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
 								<img class="imgres" src="docs/iccv19/iccv19.png" />
 							</a>
 						</td>
@@ -265,26 +302,6 @@
 					</tr>
 				</table>
 				<br/>
-				<table class="table-responsive">
-					<tr>
-						<td>
-							<a href="#">
-								<img class="imgres" src="docs/files/icra20.jpg" />
-							</a>
-						</td>
-						<td>
-							<b>A* 3D Dataset: Towards Autonomous Driving in Challenging Environments</b><br>
-							Quang-Hieu Pham, Pierre Sevestre, Ramanpreet Singh Pahwa, Huijing Zhan, Chun Ho Pang, Yuda Chen, Armin Mustafa, Vijay Chandrasekhar, and Jie Lin<br>
-							under review at <i>IEEE International Conference on Robotics and Automation (ICRA) 2020</i><br>
-							<span class="btn-group btn-group-xs">
-								<a class="btn btn-success" target="_blank" href="docs/files/icra20.pdf">PDF</a>
-								<a class="btn btn-success" target="_blank" href="https://arxiv.org/abs/1909.07541">Arxiv</a>
-							</span>
-						</td>
-					</tr>
-				</table>
-				<br/>
-				
 				<table class="table-responsive">
 					<tr>
 						<td>
@@ -641,10 +658,19 @@
 				<table class="table-responsive">
 					<tr>
 						<td>
-						<img class="img-rounded" src="docs/misc/bmvalogo.png" alt="" width="40" height="40"/>
+						<img class="img-rounded" src="docs/misc/qmul.png" alt="" width="40" height="40"/>
 						</td>
 						<td>
-							<b> &nbsp U4D: Unsupervised Dynamic Scene Understanding, 28 Oct 2019 </b></font> <br/>
+							<b> &nbsp 4D Dynamic Scene Understanding, 23 Jan 2019 </b></font> <br/>
+							&nbsp at Queen Mary University London, UK <br/> <br/>
+						</td>
+					</tr>
+					<tr>
+						<td>
+						<img class="img-rounded" src="docs/misc/iccv2019.png" alt="" width="40" height="40"/>
+						</td>
+						<td>
+							<b> &nbsp Unsupervised 4D Dynamic Scene Understanding, 28 Oct 2019 </b></font> <br/>
 							&nbsp at Moving Cameras Workshop, ICCV, Seoul, South Korea <br/> <br/>
 						</td>
 					</tr>
