Updated with new information

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 							at <i>IEEE International Conference on Robotics and Automation (ICRA) 2020</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/files/icra20.pdf">PDF</a>
-								<a class="btn btn-success" target="_blank" href="https://arxiv.org/abs/1909.07541">Arxiv</a>
+								<a class="btn btn-success" target="_blank" href="https://github.com/I2RDL2/ASTAR-3D">Website</a>
 							</span>
 						</td>
 					</tr>
