Updated with new information

--- a/index.html
+++ b/index.html
@@ -604,12 +604,26 @@
 					<tr>
 						<td>
 							<a href="#">
+								<img class="imgres" src="docs/misc/dynavis20.jpg" />
+							</a>
+						</td>
+						<td>
+							<a href="https://dynavis.github.io/2020/"> DynaVis - The Second International Workshop on Dynamic Scene Reconstruction @ CVPR 2020 </a> in June 2020, Seattle, Washington <br>
+							Organisers: <a href="http://arminmustafa.github.io">Armin Mustafa</a>, <a href="https://www.surrey.ac.uk/people/marco-volino">Marco Volino</a>, <a href="https://web.stanford.edu/~zollhoef/">Michael Zollhofer</a>, <a href="https://dancasas.github.io/">Dan Casas</a>, <a href="https://researchportal.bath.ac.uk/en/persons/christian-richardt">Christian Richardt</a>  and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a> <br>
+						</td>
+					</tr>
+				</table>	
+				<br/>		
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
 								<img class="imgres" src="docs/misc/dynavis.jpg" />
 							</a>
 						</td>
 						<td>
 							<br>
-							<a href="https://dynavis.github.io/"> DynaVis - The 1st International Workshop on Dynamic Scene Reconstruction @ CVPR 2019 </a> on 15 June 2019, Long Beach, California <br>
+							<a href="https://dynavis.github.io/2019/"> DynaVis - The First International Workshop on Dynamic Scene Reconstruction @ CVPR 2019 </a> on 15 June 2019, Long Beach, California <br>
 							Organisers: <a href="http://arminmustafa.github.io">Armin Mustafa</a>, <a href="https://www.surrey.ac.uk/people/marco-volino">Marco Volino</a>, <a href="https://web.stanford.edu/~zollhoef/">Michael Zollhofer</a>, <a href="https://dancasas.github.io/">Dan Casas</a> and <a href="https://www.surrey.ac.uk/people/adrian-hilton">Adrian Hilton</a> <br>
 						</td>
 					</tr>
@@ -661,7 +675,7 @@
 						<img class="img-rounded" src="docs/misc/qmul.png" alt="" width="40" height="40"/>
 						</td>
 						<td>
-							<b> &nbsp 4D Dynamic Scene Understanding, 23 Jan 2019 </b></font> <br/>
+							<b> &nbsp Unsupervised 4D Dynamic Scene Understanding, 23 Jan 2019 </b></font> <br/>
 							&nbsp at Queen Mary University London, UK <br/> <br/>
 						</td>
 					</tr>
