Updated with new information

--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
 						<img class="img-rounded" src="docs/misc/qmul.png" alt="" width="40" height="40"/>
 						</td>
 						<td>
-							<b> &nbsp Unsupervised 4D Dynamic Scene Understanding, 23 Jan 2019 </b></font> <br/>
+							<b> &nbsp Unsupervised 4D Dynamic Scene Understanding, 23 Jan 2020 </b></font> <br/>
 							&nbsp at Queen Mary University London, UK <br/> <br/>
 						</td>
 					</tr>
@@ -814,10 +814,22 @@
 				<table class="table-responsive">
 					<tr>
 						<td>
+						<img class="img-rounded" src="docs/misc/ucl.png" alt="" width="40" height="40"/>
+						</td>
+						<td>
+							<font size="+0.25"> &nbsp Visiting Researcher: Jan' 2020 - Present, <b>Host</b>: <a href="http://www0.cs.ucl.ac.uk/staff/L.Agapito/"> Prof. Lourdes Agapito </a> </font> <br style="line-height: 8px" />
+							<b> &nbsp University College London (UCL), UK </b><br/>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
 						<img class="img-rounded" src="docs/misc/astar.png" alt="" width="40" height="40"/>
 						</td>
 						<td>
-							<font size="+0.25"> &nbsp Visiting Researcher: May' 2019 - Oct' 2019 </font> <br style="line-height: 8px" />
+							<font size="+0.25"> &nbsp Visiting Researcher: May' 2019 - Oct' 2019, <b>Host</b>: <a href="https://vijaychan.github.io/"> Dr. Vijay Chandrasekhar </a> </font> <br style="line-height: 8px" />
 							<b> &nbsp Agency for Science, Technology and Research (A*STAR), Singapore </b><br/>
 						</td>
 					</tr>
