--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 							at <i>International Conference on Computer Vision Workshop (ICCVW) 2019</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/files/Caliskan2019.pdf">PDF</a>
-								<a class="btn btn-success" target="_blank" href="https://arxiv.org/abs/1910.01241">Arxiv</a>
+								<a class="btn btn-success" target="_blank" href="https://arxiv.org/abs/1910.01241">Website</a>
 							</span>
 						</td>
 					</tr>
@@ -295,8 +295,8 @@
 							under review at <i>International Journal in Computer Vision (IJCV) 2019</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/cvpr16/ArminIJCV2019.pdf">PDF</a>
+								<a class="btn btn-success" target="_blank" href="https://arxiv.org/abs/1907.08195">Website</a>
 								<a class="btn btn-success" target="_blank" href="https://www.youtube.com/watch?v=FFVTIY47NQ8&t=1s">Video</a>
-								<a class="btn btn-success" target="_blank" href="https://arxiv.org/abs/1907.08195">Arxiv</a>
 							</span>
 						</td>
 					</tr>
@@ -336,7 +336,6 @@
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/hlc19/ArminHLC2019.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="docs/hlc19/poster.pdf">Poster</a>
-								<a class="btn btn-success" target="_blank" href="docs/hlc19/presentation.pdf">PPT</a>
 							</span>
 						</td>
 					</tr>
@@ -377,8 +376,6 @@
 								<a class="btn btn-success" target="_blank" href="docs/3dv17/Armin3DV2017.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4DMP/4DLFV/">Website</a>
 								<a class="btn btn-success" target="_blank" href="https://youtu.be/SMyGsHG4Ung">Video</a>
-								<a class="btn btn-success" target="_blank" href="docs/3dv17/poster.pdf">Poster</a>
-								<a class="btn btn-success" target="_blank" href="docs/3dv17/ppt.pdf">PPT</a>
 								<!--<a class="btn btn-success" target="_blank" href="docs/cvpr17/cvpr17.bib">bib</a>-->
 							</span>
 						</td>
@@ -401,8 +398,6 @@
 								<a class="btn btn-success" target="_blank" href="docs/cvpr17/ArminCVPR2017.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4DMP/SemRecon/">Website</a>
 								<a class="btn btn-success" target="_blank" href="https://youtu.be/obnDpiDnScI">Video</a>
-								<a class="btn btn-success" target="_blank" href="docs/cvpr17/poster.pdf">Poster</a>
-								<a class="btn btn-success" target="_blank" href="docs/cvpr17/ppt.pdf">PPT</a>
 								<!--<a class="btn btn-success" target="_blank" href="docs/cvpr17/cvpr17.bib">bib</a>-->
 								<!--<a class="btn btn-success" target="_blank" href="#">data</a>-->
 							</span>
@@ -426,8 +421,6 @@
 								<a class="btn btn-success" target="_blank" href="docs/cvpr16/ArminCVPR2016.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4DMP/4DRecon/">Website</a>
 								<a class="btn btn-success" target="_blank" href="https://youtu.be/bm_P13_-DsQ">Video</a>
-								<a class="btn btn-success" target="_blank" href="docs/cvpr16/poster.pdf">Poster</a>
-								<a class="btn btn-success" target="_blank" href="docs/cvpr16/ppt.pdf">PPT</a>
 								<!--<a class="btn btn-success" target="_blank" href="docs/cvpr17/cvpr17.bib">bib</a>-->
 							</span>
 						</td>
@@ -449,7 +442,6 @@
 								<a class="btn btn-success" target="_blank" href="docs/eccv16/ArminECCV2016.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4DMP/4Dnonseq/">Website</a>
 								<a class="btn btn-success" target="_blank" href="https://youtu.be/GPu-UKppCfk">Video</a>
-								<a class="btn btn-success" target="_blank" href="docs/eccv16/poster.pdf">Poster</a>
 							</span>
 						</td>
 					</tr>
@@ -471,7 +463,6 @@
 								<a class="btn btn-success" target="_blank" href="docs/iccv15/ArminICCV2015.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4DMP/DyRecon/">Website</a>
 								<a class="btn btn-success" target="_blank" href="https://youtu.be/uIDeJ1_MvaE">Video</a>
-								<a class="btn btn-success" target="_blank" href="docs/iccv15/poster.pdf">Poster</a>
 							</span>
 						</td>
 					</tr>
@@ -492,8 +483,6 @@
 								<a class="btn btn-success" target="_blank" href="docs/3dv15/Armin3DV2015.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4DMP/SFD/">Website</a>
 								<a class="btn btn-success" target="_blank" href="https://youtu.be/m3NThvKpR5w">Video</a>
-								<a class="btn btn-success" target="_blank" href="docs/3dv15/poster.pdf">Poster</a>
-								<a class="btn btn-success" target="_blank" href="docs/3dv15/ppt.pdf">PPT</a>
 								<!--<a class="btn btn-success" target="_blank" href="docs/cvpr17/cvpr17.bib">bib</a>-->
 							</span>
 						</td>
@@ -514,7 +503,6 @@
 							at <i>The 11th European Conference in Visual Media Production (CVMP) 2015</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/cvmp14/ArminCVMP2014.pdf">PDF</a>
-								<a class="btn btn-success" target="_blank" href="docs/cvmp14/poster.pdf">Poster</a>
 							</span>
 						</td>
 					</tr>
@@ -534,7 +522,7 @@
 							in Speech, Image, and Language Processing for Human Computer Interaction: Multi-Modal Advancements 2012</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/masters/book.pdf">PDF</a>
-								<a class="btn btn-success" target="_blank" href="http://www.igi-global.com/book/speech-image-language-processing-human/60784">Press</a>								
+								<a class="btn btn-success" target="_blank" href="http://www.igi-global.com/book/speech-image-language-processing-human/60784">Website</a>								
 							</span>
 						</td>
 					</tr>
@@ -572,7 +560,7 @@
 							<b>Method and apparatus for converting 2d video to 3d video</b><br>
 							U.S. and Korean Patent 2013</i><br>
 							<span class="btn-group btn-group-xs">
-								<a class="btn btn-success" target="_blank" href="https://www.google.com/patents/US20140210944">LINK</a>
+								<a class="btn btn-success" target="_blank" href="https://www.google.com/patents/US20140210944">Website</a>
 							</span>
 						</td>
 					</tr>
@@ -591,7 +579,7 @@
 							Armin Mustafa and K.S. Venkatesh<br>
 							Indian Patent 2010</i><br>
 							<span class="btn-group btn-group-xs">
-								<a class="btn btn-success" target="_blank" href="http://www.iitk.ac.in/siic/d/content/method-and-system-human-gesture-based-visual-contour-analysis">LINK</a>
+								<a class="btn btn-success" target="_blank" href="http://www.iitk.ac.in/siic/d/content/method-and-system-human-gesture-based-visual-contour-analysis">Website</a>
 							</span>
 						</td>
 					</tr>
@@ -640,9 +628,6 @@
 						<td>
 							<a href="http://www.bmva.org/_media/meetings:BMVA3DSceneReport.pdf"> BMVA symposium on Dynamic Scene Reconstruction </a> on 21 June 2017 , London <br>
 							Organisers: <a href="https://www.surrey.ac.uk/people/jean-yves-guillemaut" target="_blank">Jean-Yves Guillemaut</a>, <a href="http://arminmustafa.github.io">Armin Mustafa</a> and <a href="https://www.surrey.ac.uk/people/marco-volino">Marco Volino</a><br>
-							<span class="btn-group btn-group-xs">
-								<a class="btn btn-success" target="_blank" href="docs/symposium/ppt.pdf">PPT</a>
-							</span>
 						</td>
 					</tr>
 				</table>
